--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "body-parser": "^1.18.3",
         "cheerio": "^1.0.0-rc.2",
+        "concurrently": "^5.0.2",
         "cors": "^2.8.4",
         "express": "^4.16.3",
         "express-session": "^1.15.6",
