--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-    "name": "easycal",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "hoek": "^5.0.3",
-        "immutability-helper": "^2.6.6",
-        "jwt-decode": "^2.2.0",
-        "lodash": "^4.17.11",
-        "moment": "^2.22.1",
-        "npm": "^6.4.1",
-        "query-string": "^6.0.0",
-        "react": "^16.3.1",
-        "react-day-picker": "^7.1.5",
-        "react-dom": "^16.3.1",
-        "react-favicon": "0.0.14",
-        "react-highcharts": "^16.0.2",
-        "react-router-dom": "^4.2.2",
-        "react-scripts": "1.1.4",
-        "react-select": "^2.4.2"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "copybuild": "copyfiles -a -u 1 \"./build/**/*\" ./server/public/",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
-    },
-    "devDependencies": {}
+  "name": "easycal",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "hoek": "^5.0.3",
+    "immutability-helper": "^2.6.6",
+    "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.1",
+    "npm": "^6.4.1",
+    "query-string": "^6.0.0",
+    "react": "^16.3.1",
+    "react-day-picker": "^7.1.5",
+    "react-dom": "^16.3.1",
+    "react-favicon": "0.0.14",
+    "react-highcharts": "^16.0.2",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.4",
+    "react-select": "^2.4.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "server": "cd server && npm start",
+    "build": "react-scripts build",
+    "copybuild": "copyfiles -a -u 1 \"./build/**/*\" ./server/public/",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"npm run server\" \"npm run start\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix server && npm run build --prefix server"
+  },
+  "devDependencies": {}
 }
