--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "1.1.4",
     "react-select": "^2.4.2"
   },
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "server": "cd server && npm start",
