--- a/package.json
+++ b/package.json
@@ -20,17 +20,12 @@
     "react-scripts": "1.1.4",
     "react-select": "^2.4.2"
   },
-  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
-    "server": "cd server && nodemon server.js",
-    "client": "npm install",
     "build": "react-scripts build",
     "copybuild": "copyfiles -a -u 1 \"./build/**/*\" ./server/public/",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "dev": "concurrently \"npm run server\" \"npm run start\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix server"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {}
 }
